--- a/package.json
+++ b/package.json
@@ -73,11 +73,14 @@
 		]
 	},
 	"dependencies": {
+		"@react-oauth/google": "^0.12.1",
+		"axios": "^1.7.7",
 		"gapi-script": "^1.2.0",
 		"http-server": "^14.1.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-icons": "^5.3.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
 	}
